--- a/interior-frontend/src/index.css
+++ b/interior-frontend/src/index.css
@@ -1,20 +1,30 @@
 body {
   background-color:  rgb(236,230,214) !important;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+/* code { */
+  /* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace; */
+/* } */
 
 .nav-bar {
   background-color: rgb(236,230,214) !important;
+  font-family: 'Oxygen', sans-serif !important;
+}
+
+.ui.menu {
+  background: rgb(236,230,214) !important;
+  border: none !important;
+}
+::placeholder {
+  color: rgb(188,166,110);
+  font-size: 1em;
 }
 
 
@@ -32,17 +42,18 @@ code {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  margin: 0%;
+  margin-top: 1em;
 }
 
 .main-icon {
   border: none !important;
 }
 
-h1.ui.header {
-  color: white;
-  margin-top: 4em !important;
-  font-size: 60px!important;
+.main-title {
+  color: lightgray;
+  font-size: 60px;
+  font-family: 'Cantarell', serif;
+  margin-left: 8%;
 }
 
 .park-title {
@@ -51,6 +62,11 @@ h1.ui.header {
   font-size: 60px!important;
   line-height: 60px !important;
 }
+
+form.ui.form {
+  font-family: 'Oxygen', sans-serif !important;
+}
+
 
 .map-div {
   margin-top: 2%;
@@ -61,4 +77,5 @@ h1.ui.header {
   height: 40vh;
   
 }
+
 
