--- a/interior-frontend/src/index.css
+++ b/interior-frontend/src/index.css
@@ -45,6 +45,12 @@ body {
   margin-top: 1em;
 }
 
+.header-div {
+  width: 100%;
+  text-align: left;
+  padding-top: 28%
+}
+
 .main-icon {
   border: none !important;
 }
@@ -66,6 +72,68 @@ body {
 form.ui.form {
   font-family: 'Oxygen', sans-serif !important;
 }
+
+/* LOGIN PAGE */
+.login-div {
+    padding: 19px;
+    display: flex;
+    flex-direction: column;
+    height: 450px;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    text-align: left;
+}
+
+.login-info, .header-info {
+  margin-top: 10px;
+  font-family: 'Oxygen', sans-serif !important;
+}
+
+.login-details {
+  width: 250px;
+  height: 30px;
+  background: transparent;
+  border: 0;
+  color: black;
+  border-radius: 5px;
+  font-family: 'Oxygen', sans-serif;
+  border-bottom: 2px dotted black
+}
+
+.login-details:focus { 
+  outline: none;
+  background: transparent;}
+
+.styled-button {
+  position: relative;
+  margin-top: 5px;
+  display: inline-block;
+  white-space: nowrap;
+  background: transparent;
+  border-radius: 5px;
+  border: 02px solid #121212;
+  border-width: 01px 01px 01px 01px;
+  padding: 5px 10px 5px 10px;
+  font-size: 1em;
+  cursor: pointer;
+}
+
+.styled-button:focus { 
+  outline-color: black !important;
+}
+
+.link-styling {
+  font-family: 'Oxygen', sans-serif; 
+    font-style: none;
+    color: black ;
+}
+
+.link-styling:hover { font-style: italic;
+  color: black }
+
+  /* END LOGIN PAGE */
 
 
 .map-div {
