--- a/interior-frontend/src/index.css
+++ b/interior-frontend/src/index.css
@@ -166,44 +166,64 @@ form.ui.form {
 .edit-info {
   margin-left: 10px ;
   font-family: 'Oxygen', sans-serif !important;
+  letter-spacing: 0.1em;
   text-align: center  !important;
 
 }
 
 .edit-form-div {
-  padding: 10px 50px 5px 5px  !important;
+    /* display: flex;
+    flex-direction: column; */
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    text-align: left;
+    padding: 10px 20px 5px 5px  !important;
 }
 
+
+
 .hr-line {
-  border-top: 1px dashed black;
+  border-top: 2px solid rgb(188,166,110);
+  /* border-top: 1px dashed black; */
   margin-right: 80px;
-  margin-left: 80px; }
+  margin-left: 80px;
+ }
 
   .hr-line-two {
-    border-top: 1px dashed black;
-    margin-right: 80px;
-    margin-left: 80px; 
-    margin-top: 30px;
+    border-top: 3px solid rgb(188,166,110);
+  /* border-top: 1px dashed black; */
+  margin-right: 80px;
+  margin-left: 80px;
   }
 
   .btn-danger {
     /* float: left; */
-    position: relative;
-    /* display: inline-block; */
+    /* position: relative; */
+    /* display: block; */
     white-space: nowrap;
-    background: rgb(224, 168, 180);
+    background: transparent;
     border-radius: 5px;
     border: 02px solid #121212;
     border-width: 01px 01px 01px 01px;
     padding: 5px 10px 5px 10px;
     font-size: 1em;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-left: 6px;
+    transition: all 0.5s ease-in-out 0s;
+  }
+
+  .btn-danger:hover {
+    transform: scale(1.05);
+    background: lightgray;
+
   }
 
   .submit-button {
+    /* display: block;
     position: relative;
-    display: inline-block;
+    float: left; */
     margin-top: 5px;
     white-space: nowrap;
     background: transparent;
@@ -213,21 +233,48 @@ form.ui.form {
     padding: 5px 10px 5px 10px;
     font-size: 1em;
     cursor: pointer;
+    margin-left: 6px;
   }
 
-  div.ui.input {  
-    background-color:  rgb(236,230,214) !important;
-    border-top: none !important;
+  .form-input {  
+    width: 30%;
+    background-color:  rgb(236,230,214);
+    border: 0;
     color: black;
     border-radius: 0px;
     font-family: 'Oxygen', sans-serif;
-    border-bottom: 1px solid black
+    border-bottom: 2px dotted black;
+    margin-top: 10px;
+    margin-bottom: 10px
   }
 
-  /* div.ui.input:focus {
-    background: transparent !important;
-  } */
+  .form-input:focus { 
+    outline: none;
+    background: transparent;
+    /* border-bottom: 3px dotted black; */
+  }
 
+    .form-input-long {  
+      width: 70%;
+      background-color:  rgb(236,230,214);
+      border: 0;
+      color: black;
+      border-radius: 0px;
+      font-family: 'Oxygen', sans-serif;
+      border-bottom: 2px dotted black;
+      margin-top: 10px;
+      margin-bottom: 10px
+    }
+
+    .form-input-long:focus { 
+      outline: none;
+      background: transparent;
+      /* border-bottom: 3px dotted black; */
+      }
+
+    .form-input-img {
+      margin-top: 10px
+    }
  /* END EDIT FORM/NEW TRIP FORM */
 
   .dashboard-div {
