other styling stuff i caught

--- a/interior-frontend/src/index.css
+++ b/interior-frontend/src/index.css
@@ -148,6 +148,7 @@ form.ui.form {
   }
 
   .trip-card-img {
+    object-fit: cover;
     width: 150px;
     height: 150px;
     border-radius: 70%;
